# foci-3d

./: .gitignore  LICENSE  README.md  create_test_dataset.sh  environment-dev.yml  environment.yml  footprint-tools-env.yaml  pyproject.toml
code/: datasets.py  detect_footprints.py  footprint-to-procap.ipynb  footprint_bigwig.py  footprint_to_procap.ipynb  footprinting.ipynb  footprinting.py  models.py  pairs_to_fragment_counts.py  pairs_to_fragment_counts_README.md  pairs_to_fragments_tsv.py  parallel_pairs_processor_clean.py  plot_region.py  time_preprocessing.py
conda-recipe/: README.md  meta.yaml
src/foci3d/: __init__.py  cli.py  count.py  detect.py  footprinting.py  pairs_to_fragments_tsv.py  parse.py  plot.py
test_data/: mesc_microc_test.counts.tsv.gz.tbi
tests/: README.md  __init__.py  helpers.py  run_tests.py  test_cli.py  test_conda_recipe.py  test_detect.py  test_pairs_to_fragment_counts.py  test_pairs_to_fragments.py  test_parse.py  test_plot.py
tests/data/: mesc_procap_test.bw  test_genes.bed12  test_genes.gtf
